--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pancakeswap/sdk": "^2.3.2",
     "@ethersproject/experimental": "^5.4.0",
+    "@pancakeswap/sdk": "^2.3.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,6 +18,7 @@
     "bignumber.js": "^9.0.1",
     "connected-react-router": "^6.9.1",
     "ethers": "^5.4.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@pancakeswap/eslint-config-pancake": "^1.2.0",
+    "@types/bignumber.js": "^5.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.11",
