--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@binance-chain/bsc-connector": "^1.0.0",
     "@ethersproject/experimental": "^5.4.0",
     "@pancakeswap/sdk": "^2.3.2",
     "@reduxjs/toolkit": "^1.6.1",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^17.0.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.4",
     "bignumber.js": "^9.0.1",
     "connected-react-router": "^6.9.1",
     "ethers": "^5.4.3",
