--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@web3-react/walletconnect-connector": "^6.2.4",
     "bignumber.js": "^9.0.1",
     "connected-react-router": "^6.9.1",
+    "dotenv": "^10.0.0",
     "ethers": "^5.4.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
